--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "24.0.0"
     defaultConfig {
-        applicationId "com.gumtree.adsdemo"
+        applicationId "com.gumtree.mrpdevpro"
         minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
